# Havenly

./: README.md
Final-Project/Heavenly/: .env.docker.example  .env.example  .gitignore  db.sql  db_citus.sql  docker-compose.yml  pyproject.toml
Final-Project/Heavenly/scripts/: citus_setup.sql  db_test_data.sql  dw_kpis.sql  dw_populate.sql  dw_schema.sql  pg_hba.conf  start_cluster.sh
Final-Project/Heavenly/src/: main.py
Final-Project/Heavenly/src/core/: __init__.py  config.py
Final-Project/Heavenly/src/models/: __init__.py  amenity.py  available_date.py  base.py  booking.py  city.py  country.py  currency.py  enums.py  payment.py  payment_method.py  property.py  property_amenity.py  property_photo.py  property_type.py  region.py  review.py  review_response.py  role.py  user.py  user_role.py
Final-Project/Heavenly/src/repositories/: database.py
Final-Project/Heavenly/src/routers/: auth.py  available_dates.py  bookings.py  locations.py  payments.py  properties.py  users.py
Final-Project/Heavenly/src/schemas/: auth.py  available_date.py  booking.py  location.py  payment.py  property.py  user.py
Final-Project/Heavenly/src/services/: auth_service.py  availability_service.py  bi_service.py  booking_service.py  location_service.py  payment_service.py  property_discovery_service.py  property_service.py  user_service.py
Final-Project/Heavenly/src/utils/: get_current_user.py
docs/: README.md
docs/Workshop-1/: README.md
docs/Workshop-2/: README.md
